# AI-Feedback

./: .env.example  .gitignore  README.md  feedback-config.yaml  feedback_app.py  install.sh  pyproject.toml
.github/workflows/: deploy-pages.yml  release.yml
configs/: feedback-csharp-only.yaml
interviews/: martin-kopecky.txt  sample-notes.txt
src/ai_feedback/: __init__.py  cli.py  config.py  llm.py  models.py  pdf_generator.py  profile.py
web/: index.html  package-lock.json  package.json  style.css  vite.config.js
web/public/profiles/: architecture.json  csharp.json  frontend-angular.json  frontend-react.json  frontend-vue.json  java.json  manager.json
web/src/: llm.js  main.js  pdf.js  profiles.js  prompt.js
